force-app/main/default/objects/ObligationCriteria__c/ObligationCriteria__c.object-meta.xml
<CustomObject>
    <description>This object is the key object for storing all the criteria associated with each obligation. This acts as the child object to the Obligation object</description>
    <label>Obligation Criteria</label>
    <nameField>
        <label>Obligation Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obligation Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>