force-app/main/default/objects/ObligationCriteria__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will store whether the criteria is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>