force-app/main/default/objects/ObligationCriteria__c/fields/CriteriaNumber__c.field-meta.xml
<CustomField>
    <fullName>CriteriaNumber__c</fullName>
    <description>This field will store the unique Criteria number for each Criteria</description>
    <label>Criteria Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>