force-app/main/default/objects/ObligationCriteria__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field will store the actual criteria information</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>