force-app/main/default/objects/ObligationCriteria__c/fields/Obligation__c.field-meta.xml
<CustomField>
    <fullName>Obligation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the Obligation name associated with each criteria. This will be lookup to Obligation object</description>
    <label>Obligation</label>
    <referenceTo>ObligationConfiguration__c</referenceTo>
    <relationshipLabel>Obligation Criterias</relationshipLabel>
    <relationshipName>Obligation_Criterias</relationshipName>
    <type>Lookup</type>
</CustomField>